<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/sort_ways"
        android:title="@string/sort_ways"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/sort_by_time"
        android:title="@string/sort_by_time" />
    <item
        android:id="@+id/sort_by_name"
        android:title="@string/sort_by_name" />
    <item
        android:id="@+id/sort_by_size"
        android:title="@string/sort_by_size" />
    <item
        android:id="@+id/sort_by_duration"
        android:title="@string/sort_by_duration" />
</menu>